--- a/index.html
+++ b/index.html
@@ -421,12 +421,12 @@
                 <div class="navigation-btn nav-active">
                     <img src="./img/navigation.svg" alt="Nawigacja">
                 </div>
-                <div class="close-btn nav-active">
+                <div class="close-btn ">
                     <img src="./img/close.svg" alt="'X'">
                 </div>
             </div>
 
-            <div class="navigation-mobile-content active">
+            <div class="navigation-mobile-content">
                 <div class="navigation-mobile-anchors">
                     <div class="test">
                         <div class="mobile-anchor active-anchor">
@@ -443,7 +443,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="navigation-mobile-socials"></div>
+                <div class="navigation-mobile-socials">
+                    <div class="mobile-social">
+                        <img src="./img/github-white.svg" alt="">
+                    </div>
+                    <div class="mobile-social">
+                        <img src="./img/twitter-white.svg" alt="">
+                    </div>
+                    <div class="mobile-social">
+                        <img src="./img/facebook-messenger-white.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         
