--- a/index.html
+++ b/index.html
@@ -445,13 +445,19 @@
                 </div>
                 <div class="navigation-mobile-socials">
                     <div class="mobile-social">
-                        <img src="./img/github-white.svg" alt="">
+                        <a href="">
+                            <img src="./img/github-circle-white.svg" alt="">
+                        </a>
                     </div>
                     <div class="mobile-social">
-                        <img src="./img/twitter-white.svg" alt="">
+                        <a href="">
+                            <img src="./img/twitter-white.svg" alt="">
+                        </a>
                     </div>
                     <div class="mobile-social">
-                        <img src="./img/facebook-messenger-white.svg" alt="">
+                        <a href="">
+                            <img src="./img/facebook-messenger-white.svg" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
