--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="spec-tools">
                 <div class="tools-content">
                     <div class="tools-type-flex">
-                        <div class="active-tool"></div>
+                        <div class="active-tool right-tool"></div>
                         <div class="programming-tools">
                             <p>Narzędzia do
                                 <br>
@@ -377,6 +377,7 @@
                             <input type="checkbox" id="zgoda" name="zgoda">
                             Wyrażam zgodę na przetwarzanie administratora strony (Patryk Jary) moich danych osobowych, zawartych w formularzu kontaktowym, w celu udzielenia odpowiedzi na przesłane przeze mnie zapytanie.
                         </label>
+                        <button class="button-send-form" id='validate' type="submit" name="submit" value="Send">Wyślij <img src="./img/paper-plane 1.svg" alt=""></button>
                     </form>
                 </div>
             </div>
