--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="spec-tools">
                 <div class="tools-content">
                     <div class="tools-type-flex">
-                        <div class="active-tool right-tool"></div>
-                        <div class="programming-tools">
+                        <div class="active-tool"></div>
+                        <div class="programming-tools active-tools">
                             <p>Narzędzia do
                                 <br>
                                 Programowania
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="my-tools-main">
-                        <div class="my-tools-programming">
+                        <div class="my-tools-programming my-active-tools">
                             <div class="tool">
                                 <img src="./img/HTML5.svg" alt="HTML 5">
                                 <p>Html 5</p>
@@ -178,10 +178,6 @@
                             <div class="tool">
                                 <img src="./img/AI.svg" alt="Adobe illustrator">
                                 <p>Adobe illustrator</p>
-                            </div>
-                            <div class="tool">
-                                <img src="./img/PS.svg" alt="Adobe Photoshop">
-                                <p>Adobe Photoshop</p>
                             </div>
                             <div class="tool">
                                 <img src="./img/PS.svg" alt="Adobe Photoshop">
