--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                                 <img src="./img/PHP.svg" alt="PHP">
                                 <p>PHP</p>
                             </div>
+                            <div class="tool">
+                                <img src="./img/PHP.svg" alt="PHP">
+                                <p>PHP</p>
+                            </div>
                         </div>
                         <div class="my-tools-designing">
                             <div class="tool">
