--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="square-ornament-absolute">
+                    <div class="square-ornament-absolute active-orna">
+                        <div class="square-ornament-relative">
+                            <div class="square-ornament-relative SOR-small"></div>
+                        </div>
+                    </div>
+                    <div class="square-ornament-absolute right-side">
                         <div class="square-ornament-relative">
                             <div class="square-ornament-relative SOR-small"></div>
                         </div>
@@ -194,7 +199,7 @@
             </div>
         </div>
 
-        <div class="short-contact">
+        <div class="short-contact ">
             <div class="sc-border-top"></div>
             <h3>Masz pytania?</h3>
             <h4>Zadzwoń lub napisz!</h4>
