--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
                                 <p>Figma</p>
                             </div>
                             <div class="tool">
+                                <img src="./img/FIGMA.svg" alt="Figma">
+                                <p>Figma</p>
+                            </div>
+                            <div class="tool">
                                 <img src="./img/AI.svg" alt="Adobe illustrator">
                                 <p>Adobe illustrator</p>
                             </div>
