--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
                                 <img src="./img/PS.svg" alt="Adobe Photoshop">
                                 <p>Adobe Photoshop</p>
                             </div>
+                            <div class="tool">
+                                <img src="./img/PS.svg" alt="Adobe Photoshop">
+                                <p>Adobe Photoshop</p>
+                            </div>
                         </div>
                     </div>
                     <div class="square-ornament-absolute active-orna">
