--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                             <div class="tool">
                                 <img src="./img/HTML5.svg" alt="HTML 5">
                                 <p>Html 5</p>
+                            </div><div class="tool">
+                                <img src="./img/HTML5.svg" alt="HTML 5">
+                                <p>Html 5</p>
                             </div>
                             <div class="tool">
                                 <img src="./img/CSS.svg" alt="Css 3">
