--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                             <div class="tool">
                                 <img src="./img/CSS.svg" alt="Css 3">
                                 <p>Css 3</p>
+                            </div><div class="tool">
+                                <img src="./img/CSS.svg" alt="Css 3">
+                                <p>Css 3</p>
                             </div>
                             <div class="tool">
                                 <img src="./img/JS.svg" alt="Javascript">
