--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                             <div class="active-underscore"></div>
                         </div>
                         <div class="nav-anchor">
-                            <a href="">O mnie</a>
+                            <a href="./o_mnie/index.html">O mnie</a>
                             <div class="underscore"></div>
                         </div>
                         <div class="nav-anchor">
-                            <a href="">Realizacje</a>
+                            <a href="./realizacje/index.html">Realizacje</a>
                             <div class="underscore"></div>
                         </div>
                         <div class="nav-anchor">
-                            <a href="">Kontakt</a>
+                            <a href="./kontakt/index.html">Kontakt</a>
                             <div class="underscore"></div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                         <p>
                             Programowanie to moja praca ale i również ogromna pasja. Ciągłe poprawianie swoich umiejętności, oraz nabywanie nowych pozwala mi podejmować się coraz bardziej wymagających zadań.
                         </p>
-                        <a href="#">Więcej o mnie...</a>
+                        <a href="./o_mnie/index.html">Więcej o mnie...</a>
                     </div>
                 </div>
                 
@@ -144,9 +144,6 @@
                             <div class="tool">
                                 <img src="./img/CSS.svg" alt="Css 3">
                                 <p>Css 3</p>
-                            </div><div class="tool">
-                                <img src="./img/CSS.svg" alt="Css 3">
-                                <p>Css 3</p>
                             </div>
                             <div class="tool">
                                 <img src="./img/JS.svg" alt="Javascript">
@@ -186,10 +183,6 @@
                                 <img src="./img/PS.svg" alt="Adobe Photoshop">
                                 <p>Adobe Photoshop</p>
                             </div>
-                            <div class="tool">
-                                <img src="./img/PS.svg" alt="Adobe Photoshop">
-                                <p>Adobe Photoshop</p>
-                            </div>
                         </div>
                     </div>
                     <div class="square-ornament-absolute active-orna">
@@ -213,11 +206,11 @@
             <div class="sc-call-mail">
                 <div class="sc-call">
                     <img src="./img/phone-unfilled.svg" alt="Zadzwoń">
-                    <a href="">+48 694 358 660</a>
+                    <a href="tel:+48 694 358 660">+48 694 358 660</a>
                 </div>
                 <div class="sc-mail">
                     <img src="./img/message-unfilled.svg" alt="Napisz">
-                    <a href="">patrykjary.kontakt@gmail.com</a>
+                    <a href="mailto:patrykjary.kontakt@gmail.com">patrykjary.kontakt@gmail.com</a>
                 </div>
             </div>
             <div class="sc-border-bottom"></div>
@@ -231,7 +224,7 @@
                     <div class="project-info">
                         <p>Bounne</p>
                         <p>Salon Fryzjerski</p>
-                        <a href="">
+                        <a href="https://k9xxxx.github.io/Bounne/">
                             <p>Przejdź</p>
                             <i class="icofont-arrow-right"></i>
                         </a>
@@ -242,7 +235,7 @@
                     <div class="project-info">
                         <p>Vegsec</p>
                         <p>System Monitoringu</p>
-                        <a href="">
+                        <a href="https://k9xxxx.github.io/VegSec/index.html">
                             <p>Przejdź</p>
                             <i class="icofont-arrow-right"></i>
                         </a>
@@ -253,7 +246,7 @@
                     <div class="project-info">
                         <p>2020</p>
                         <p>Salon Fryzjerski</p>
-                        <a href="">
+                        <a href="https://k9xxxx.github.io/Salon-Fryzjerski-2020/">
                             <p>Przejdź</p>
                             <i class="icofont-arrow-right"></i>
                         </a>
@@ -262,7 +255,7 @@
 				
             </div>
             <div class="more-realization">
-                <a href="#" class="more-realization-content">
+                <a href="./realizacje/index.html" class="more-realization-content">
                     <p>Więcej realizacji</p>
                     <div class="icon">
                         <i class="icofont-arrow-right"></i>
@@ -279,7 +272,7 @@
                         <p>O usługach projektowania i programowania stron internetowych</p>
                     </div>
                     <div class="faq-about-a">
-                        <a href="">Napisz do mnie</a>
+                        <a href="./kontakt/index.html">Napisz do mnie</a>
                     </div>
                 </div>
 
@@ -348,15 +341,15 @@
                         <div class="ornament-div-contact"></div>
                     </div>
                     <div class="type-of-contact">
-                        <a href="">+48 694 358 660</a>
+                        <a href="tel:+48 694 358 660">+48 694 358 660</a>
                         <i class="icofont-phone"></i>
                     </div>
                     <div class="type-of-contact">
-                        <a href="">patrykjary.kontakt@gmail.com</a>
+                        <a href="mailto:patrykjary.kontakt@gmail.com">patrykjary.kontakt@gmail.com</a>
                         <i class="icofont-ui-message"></i>
                     </div>
                     <div class="type-of-contact">
-                        <a href="">Messenger</a>
+                        <a href="https://www.messenger.com/t/100011056745057">Messenger</a>
                         <i class="icofont-facebook-messenger"></i>
                     </div>
                 </div>
@@ -406,15 +399,15 @@
                         <div class="underscore-active"></div>
                     </div>
                     <div class="footer-anchor">
-                        <a href="">O mnie</a>
+                        <a href="./o_mnie/index.html">O mnie</a>
                         <div class="underscore-active"></div>
                     </div>
                     <div class="footer-anchor">
-                        <a href="">Realizacje</a>
+                        <a href="./realizacje/index.html">Realizacje</a>
                         <div class="underscore-active"></div>
                     </div>
                     <div class="footer-anchor">
-                        <a href="">Kontakt</a>
+                        <a href="./kontakt/index.html">Kontakt</a>
                         <div class="underscore-active"></div>
                     </div>
                 </div>
@@ -442,29 +435,29 @@
                             <a href="">Home</a>
                         </div>
                         <div class="mobile-anchor ">
-                            <a href="">O mnie</a>
+                            <a href="./o_mnie/index.html">O mnie</a>
                         </div>
                         <div class="mobile-anchor ">
-                            <a href="">Realizacje</a>
+                            <a href="./realizacje/index.html">Realizacje</a>
                         </div>
                         <div class="mobile-anchor">
-                            <a href="">Kontant</a>
+                            <a href="./kontakt/index.html">Kontant</a>
                         </div>
                     </div>
                 </div>
                 <div class="navigation-mobile-socials">
                     <div class="mobile-social">
-                        <a href="">
+                        <a href="https://github.com/K9xxxx">
                             <img src="./img/github-circle-white.svg" alt="">
                         </a>
                     </div>
                     <div class="mobile-social">
-                        <a href="">
+                        <a href="https://twitter.com/PatrykJary">
                             <img src="./img/twitter-white.svg" alt="">
                         </a>
                     </div>
                     <div class="mobile-social">
-                        <a href="">
+                        <a href="https://www.messenger.com/t/100011056745057">
                             <img src="./img/facebook-messenger-white.svg" alt="">
                         </a>
                     </div>
