--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                             <div class="tool">
                                 <img src="./img/HTML5.svg" alt="HTML 5">
                                 <p>Html 5</p>
+                            </div><div class="tool">
+                                <img src="./img/HTML5.svg" alt="HTML 5">
+                                <p>Html 5</p>
                             </div>
                             <div class="tool">
                                 <img src="./img/CSS.svg" alt="Css 3">
@@ -471,6 +474,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.js" integrity="sha512-UgS0SVyy/0fZ0i48Rr7gKpnP+Jio3oC7M4XaKP3BJUB/guN6Zr4BjU0Hsle0ey2HJvPLHE5YQCXTDrx27Lhe7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.js" integrity="sha512-judXDFLnOTJsUwd55lhbrX3uSoSQSOZR6vNrsll+4ViUFv+XOIr/xaIK96soMj6s5jVszd7I97a0H+WhgFwTEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.js" integrity="sha512-mq6TSOBEH8eoYFBvyDQOQf63xgTeAk7ps+MHGLWZ6Byz0BqQzrP+3GIgYL+KvLaWgpL8XgDVbIRYQeLa3Vqu6A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../msdsain.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
