--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
             <div class="navigation-mobile-content">
                 <div class="navigation-mobile-anchors">
-                    <div class="test">
+                    <div class="navigation-mobile-div-anchors">
                         <div class="mobile-anchor active-anchor">
                             <a href="">Home</a>
                         </div>
