--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         </div>
 
                         <div class="qa-answer">
-                            Responsywne strony www są podstawą nowoczesnych procesów projektowania i tworzenia stron internetowych. Zapewniam, że Twoja witryna będzie kompatybilna na wszystkich urządzeniach (mobilnych, tabletach i komputerach stacjonarnych). Co więcej kompatybilność tworzy płynny projekt strony internetowej, aby zapewnić użytkownikom witryny najlepsze wrażenia podczas przeglądania. Ponieważ coraz więcej osób używa smartfonów do przeglądania stron internetowych, dlatego ważne jest, abyś nie odstraszał potencjalnych klientów i robił jak najlepsze pierwsze wrażenie.
+                            xyz
                         </div>
                     </div>
                     <div class="qa">
@@ -300,7 +300,7 @@
                         </div>
 
                         <div class="qa-answer">
-                            Tyle ile trzeba
+                            Czas potrzebny na stworzenie strony internetowej zależy od jej zakresu i funkcjonalności. Prosta strona wizytówka może być gotowa w kilka dni do tygodnia, ale bardziej zaawansowane projekty, takie jak sklepy internetowe czy aplikacje, mogą trwać od kilku tygodni do kilku miesięcy. Ważne jest dokładne określenie wymagań i funkcji, aby móc oszacować czas realizacji. Skomplikowany projekt graficzny, dostarczanie treści oraz testowanie i optymalizacja także wpływają na czas potrzebny na stworzenie strony. 
                         </div>
                     </div>
                     <div class="qa">
@@ -313,7 +313,7 @@
                         </div>
 
                         <div class="qa-answer">
-                            RWD
+                            Responsywne projektowanie strony internetowej oznacza tworzenie witryny w taki sposób, że automatycznie dostosowuje się do różnych rozmiarów ekranów i urządzeń, takich jak komputery, tablety i smartfony. Dzięki temu strona wygląda i działa optymalnie na każdym urządzeniu, bez konieczności przewijania lub zmieniania rozmiaru ekranu. To pozwala użytkownikom na wygodne korzystanie z witryny bez względu na to, czy używają dużego monitora czy małego telefonu. Responsywne projektowanie zwiększa także użyteczność i pozycję strony w wynikach wyszukiwania Google, ponieważ Google faworyzuje witryny przyjazne dla urządzeń mobilnych.
                         </div>
                     </div>
                     <div class="qa">
@@ -326,7 +326,7 @@
                         </div>
 
                         <div class="qa-answer">
-                            Tworzeniem stron internetowych
+                            Web developer to specjalista zajmujący się tworzeniem stron internetowych. Jego głównym zadaniem jest programowanie i projektowanie witryn internetowych, zapewniając interakcję między użytkownikiem a stroną. Web developer tworzy struktury strony, implementuje funkcjonalności, takie jak formularze, logowanie i systemy płatności, oraz dba o wydajność i bezpieczeństwo witryny. Ponadto, web developer może zarządzać bazami danych, zoptymalizować stronę pod kątem wyszukiwarek (SEO) i monitorować jej działanie. To również jego zadanie dbać o aktualizacje i utrzymanie strony internetowej po jej wdrożeniu, zapewniając jej niezawodność i dostępność online.
                         </div>
                     </div>
                 </div>
@@ -411,7 +411,7 @@
                         <div class="underscore-active"></div>
                     </div>
                 </div>
-                <a class="policy"href="">Polityka prywatności</a>
+                <a class="policy"href="./polityka_prywatności/index.html">Polityka prywatności</a>
                 <p class="rights">© 2023. All Rights Reserved.</p>
             </div>
         </footer>
