--- a/o_mnie/szablon.html
+++ b/o_mnie/szablon.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="./img/anchor.png" />
     <link rel="icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./szablon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./icofont/icofont.min.css">
@@ -46,8 +46,6 @@
             </div> 
         </div>
 
-            
-
         <footer>
             <div class="footer-content">
                 <img src="./img/logo.svg" alt="Logo">
@@ -76,7 +74,7 @@
                         <div class="underscore-active"></div>
                     </div>
                 </div>
-                <a class="policy"href="">Polityka prywatności</a>
+                <a class="policy"href="../polityka_prywatności/index.html">Polityka prywatności</a>
                 <p class="rights">© 2023. All Rights Reserved.</p>
             </div>
         </footer>
@@ -95,7 +93,7 @@
 
             <div class="navigation-mobile-content">
                 <div class="navigation-mobile-anchors">
-                    <div class="test">
+                    <div class="navigation-mobile-div-anchors">
                         <div class="mobile-anchor active-anchor">
                             <a href="">Home</a>
                         </div>
