--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -52,6 +52,65 @@
                     <h1>Kontakt</h1>
                     <div class="section-name-border"></div>
                 </div>
+                <div class="all-possible-contact">
+                    <div class="type-of-contact">
+                        <a href="">+48 694 358 660</a>
+                        <p>Telefon:</p>
+                    </div>
+                    <div class="type-of-contact">
+                        <a href="">patrykjary.kontakt@gmail.com</a>
+                        <p>E-mail:</p>
+                    </div>
+                    <div class="type-of-contact">
+                        <div class="contact-icons">
+                            <a href="https://twitter.com/PatrykJary">
+                                <i class="icofont-twitter"></i>
+                            </a>
+                            <a href="https://www.messenger.com/t/100011056745057">
+                                <i class="icofont-facebook-messenger"></i>
+                            </a>
+                        </div>
+                        <p>Media:</p>
+                    </div>
+                </div>
+                <div class="contact-form-full">
+                    <p>Napisz do mnie</p>
+                    <div class="contact-form">
+                        <form action="">
+                            <div class="form-box name-box">
+                                <input id="id-name" placeholder="Imię*" name="name" type="text" required>
+                                <h2 id="result-neg-mail"></h2>
+                            </div>
+                            <div class="form-box mail-box">
+                                <input id="id-mail" placeholder="Adres e-mail*" name="emailu" type="text" required>
+                                <h2 id="result-neg-mail"></h2>
+                            </div>
+                            <div class="form-box phone-box">
+                                <input id="id-phone" placeholder="Numer telefonu" name="phone" type="text" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                                <h2 id="result-neg-mail"></h2>
+                            </div>
+                            <div class="form-box message-box">
+                                <textarea placeholder="Treść wiadomości" name="message" id="" cols="100" rows="12" min="5"></textarea>
+                            </div>
+                            <label for="zgoda">
+                                <input type="checkbox" id="zgoda" name="zgoda">
+                                Wyrażam zgodę na przetwarzanie administratora strony (Patryk Jary) moich danych osobowych, zawartych w formularzu kontaktowym, w celu udzielenia odpowiedzi na przesłane przeze mnie zapytanie.
+                            </label>
+                            <div class="bottom-info-flex">
+                                <div class="a-validate">
+                                    <a id='validate' type="submit" name="submit" value="Send">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        Wyślij
+                                        <i class="icofont-paper-plane"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
 
